firewall.txt


https://library.linode.com/securing-your-server


1. SSH protection

sudo nano /etc/ssh/sshd_config



1b auth key

on Mac:
scp ~/.ssh/id_rsa.pub pi@raspberrypi.local:/tmp

on pi


cd ~
mkdir .ssh
mv /tmp/id_rsa.pub .ssh/authorized_keys
chown $USER:$USER .ssh/
chmod 700 .ssh
chmod 600 .ssh/authorized_keys




2. dictionary attach prevention

sudo apt-get install fail2ban

sudo nano /etc/fail2ban/jail.conf 





3. FIREWALL


sudo iptables -L

Chain INPUT (policy ACCEPT)
target     prot opt source               destination         

Chain FORWARD (policy ACCEPT)
target     prot opt source               destination         

Chain OUTPUT (policy ACCEPT)
target     prot opt source               destination  


pi@cloudpi /etc $ cat iptables.firewall.rules 
*filter

#  Allow all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 -j REJECT

#  Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allow all outbound traffic - you can modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

#  Allow HTTP and HTTPS connections from anywhere (the normal ports for websites and SSL).
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

#  Allow SSH connections
#
#  The -dport number should be the same port number you set in sshd_config
#
#-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW --dport 60022 -j ACCEPT

#-A INPUT -p tcp -m state --state NEW --dport 1723 -j ACCEPT

#  Allow ping
-A INPUT -p icmp -j ACCEPT

#  Log iptables denied calls
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

#  Drop all other inbound - default deny unless explicitly allowed policy
#-A INPUT -j DROP
#-A FORWARD -j DROP


-A INPUT -i ppp+ -j ACCEPT
-A OUTPUT -o ppp+ -j ACCEPT
-A INPUT -p tcp --dport 1723 -j ACCEPT
-A INPUT -p 47 -j ACCEPT
-A OUTPUT -p 47 -j ACCEPT

-F FORWARD
-A FORWARD -j ACCEPT

#-A POSTROUTING -t nat -o eth0 -j MASQUERADE
#-A POSTROUTING -t nat -o ppp+ -j MASQUERADE

COMMIT



---




sudo nano /etc/network/if-pre-up.d/firewall

#!/bin/sh
/sbin/iptables-restore < /etc/iptables.firewall.rules

sudo chmod +x /etc/network/if-pre-up.d/firewall

check:

sudo iptables -L



trouble shooting:


error in /var/log/syslog:  May  6 10:34:27 cloudpi pptpd[3391]: GRE: Bad checksum from pppd.


If you are using one of the many router boxes that are commonly available: Browse to the admin pages for the box and check the advanced settings. You will want to find and enable a "PPTP passthrough" feature that knows how to handle the GRE packets. (Remember that many ISP's provide you with a cable modem that has a built-in router.)
